creating page login/register

--- a/10-contact-book/src/views/index.ejs
+++ b/10-contact-book/src/views/index.ejs
@@ -21,7 +21,7 @@
             <td>Caio</td>
             <td>Martins</td>
             <td>+351 123456789</td>
-            <td>caio@gmail.com</td>
+            <td>caio@gmail.co</td>
           </tr>
         </table>
       </div>
