--- a/10-contact-book/src/views/login.ejs
+++ b/10-contact-book/src/views/login.ejs
@@ -8,7 +8,8 @@
       <h1 class="text-center">Login or create a new account</h1>
 
       <p class="text-center lead">Log in or create an account below.</p>
-
+      <%- include('./includes/messages')  %> 
+      
       <div class="row">
         <div class="col-lg">
           <h4>Create an account</h4>
