--- a/10-contact-book/src/views/index.ejs
+++ b/10-contact-book/src/views/index.ejs
@@ -8,7 +8,7 @@
       <h1 class="text-center">Phonebook</h1>
 
       <p class="text-center lead">All your contacts listed in a simple and beautiful way.</p>
-
+      <%- include('includes/messages')  %> 
       <div class="responsive-table">
         <table class="table my-3">
           <tr>
