--- a/10-contact-book/src/views/includes/nav.ejs
+++ b/10-contact-book/src/views/includes/nav.ejs
@@ -7,7 +7,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="/contact">Add Contact</a>
         </li>
+        <% if (user) { %>
+          <li class="nav-item">
+            <a class="nav-link" href="/login/logout">Log out</a>
+          </li>      
+        <% } else { %>
+          <li class="nav-item">
+            <a class="nav-link" href="/login">Log In</a>
+          </li>   
+        <% } %> 
     </div>
   </nav>
