Added update feature

--- a/10-contact-book/src/views/contact.ejs
+++ b/10-contact-book/src/views/contact.ejs
@@ -9,7 +9,11 @@
 
       <p class="text-center lead">Create or Edit your contacts below.</p>
       <%- include('includes/messages')  %> 
-      <form action="/contact/register" method="POST">
+      <% if (contact._id) { %>
+        <form action="/contact/edit/<%= contact._id %>" method="POST">
+      <% } else { %>
+        <form action="/contact/register" method="POST">
+      <% } %> 
         <input type="hidden" name="_csrf" value=<%= csrfToken %> >
         <div class="form-group">
           <label>First Name</label>
