Final commit: validated frontend

--- a/10-contact-book/src/views/login.ejs
+++ b/10-contact-book/src/views/login.ejs
@@ -11,11 +11,11 @@
       <%- include('./includes/messages')  %> 
       
       <div class="row">
-        <div class="col-lg">
+        <div class="col-lg my-5">
           <h4>Create an account</h4>
           <p>Fill the form bellow to create a new account!</p>
 
-          <form action="/login/register" method="POST">
+          <form class="form-register" action="/login/register" method="POST">
             <input type="hidden" name="_csrf" value=<%= csrfToken %> >
             <div class="form-group">
               <label>Your Email</label>
@@ -29,11 +29,11 @@
           </form>
         </div>
 
-        <div class="col-lg">
+        <div class="col-lg my-5">
           <h4>Log In</h4>
           <p>Authenticate to see your contacts!</p>
           
-          <form action="/login/login" method="POST">
+          <form class="form-login" action="/login/login" method="POST">
             <input type="hidden" name="_csrf" value=<%= csrfToken %> >
             <div class="form-group">
               <label>Your Email</label>
